--- a/projects/core/util/.eslintrc.json
+++ b/projects/core/util/.eslintrc.json
@@ -36,7 +36,7 @@
       "files": ["*.json"],
       "parser": "jsonc-eslint-parser",
       "rules": {
-        "@nx/dependency-checks": "off"
+        "@nx/dependency-checks": "error"
       }
     }
   ]
