--- a/projects/core/util/tsconfig.lib.prod.json
+++ b/projects/core/util/tsconfig.lib.prod.json
@@ -1,10 +1,7 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false,
-    "paths": {
-      "!val-loader!./dotenv-loader": ["projects/core/util/src/lib/dotenv/service/dotenv-loader.js"]
-    }
+    "declarationMap": false
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
